--- a/web/frontend/styles/navigator.scss
+++ b/web/frontend/styles/navigator.scss
@@ -44,14 +44,11 @@ nav {
     padding: 0.3em 0.5em;
     box-sizing: border-box;
     border-radius: 0.3em;
+    white-space:nowrap;
     transition:
       background-color 0.2s,
       color 0.2s;
-
-    &.login {
-      min-width: 5em;
-    }
-
+      
     &:hover {
       background-color: $primary;
       color: white;
